--- a/src/pages/1-homepage/b-findBusiness/b-findBusiness.scss
+++ b/src/pages/1-homepage/b-findBusiness/b-findBusiness.scss
@@ -5,8 +5,13 @@
         border: 0;
 
 
-        .card-body {
+        .itemCol__body {
+            margin: 2rem 0;
             padding: 0;
+
         }
+
+
+
     }
 }
